Correções, Validações Pág Login, Responsividade, Carrossel, Pág de Perfil

--- a/coop/package.json
+++ b/coop/package.json
@@ -11,7 +11,9 @@
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
+    "react-hook-form": "^6.10.1",
     "react-icons": "^3.11.0",
+    "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
