--- a/coop/package.json
+++ b/coop/package.json
@@ -16,7 +16,9 @@
     "react-icons": "^3.11.0",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "uuidv4": "^6.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
