--- a/coop/package.json
+++ b/coop/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "axios": "^0.20.0",
     "google-map-react": "^2.1.9",
     "react": "^16.13.1",
@@ -14,11 +16,15 @@
     "react-dropzone": "^11.2.0",
     "react-hook-form": "^6.10.1",
     "react-icons": "^3.11.0",
+    "react-input-mask": "^2.0.4",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.1",
     "react-spring": "^8.0.27",
-    "uuidv4": "^6.2.5"
+    "react-virtualized-select": "^3.1.3",
+    "uuidv4": "^6.2.5",
+    "yup": "^0.31.0"
   },
   "scripts": {
     "start": "react-scripts start",
