--- a/coop/package.json
+++ b/coop/package.json
@@ -9,6 +9,7 @@
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "axios": "^0.20.0",
+    "date-fns": "^2.16.1",
     "google-map-react": "^2.1.9",
     "react": "^16.13.1",
     "react-circular-progressbar": "^2.0.3",
